# septastack

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: accumulator.septa  arith_chain.septa  bool_logic.septa  countdown.septa  fn_calls.septa  gcd.septa  memory_walk.septa  nested_if.septa
docs/: ISA.md  architecture.md  demo.md  language.md  overview.md
docs/plans/: 2026-03-09-balanced-repr-design.md  2026-03-09-balanced-repr-plan.md
examples/: add.septa  functions.septa  hello.septa  if_else.septa  memory.septa  while_loop.septa
septa/asm/: assembler.py  image.py  parser.py
septa/bench/: runner.py
septa/cli/: main.py
septa/codegen/: addresses.py  codegen.py
septa/common/: base7.py  config.py  errors.py  locations.py
septa/ir/: ir.py  lowering.py
septa/lexer/: lexer.py  tokens.py
septa/parser/: ast.py  parser.py
septa/semantic/: analyzer.py  symbols.py  typesys.py
septa/vm/: alu.py  instructions.py  machine.py  memory.py  registers.py  syscalls.py
tests/: test_asm.py  test_base7.py  test_bench.py  test_codegen.py  test_ir.py  test_lexer.py  test_parser.py  test_pipeline.py  test_semantic.py  test_vm.py
